@@ -1,32 +1,38 @@
 package jcommander.pane.filetree;
 
+import jcommander.filesystem.handle.FileHandle;
+import jcommander.filesystem.handle.Handle;
+import jcommander.filesystem.handle.RootHandle;
+
 import javax.swing.tree.TreeNode;
 import java.io.File;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Enumeration;
+import java.util.*;
 
 public class RootNode implements TreeNode {
 
-    private final FileTreeNode[] mountPointNodes;
+    private final RootHandle root;
+    private final List<FileNode> children = new ArrayList<>();
 
-    public RootNode() {
-        File[] mountPoints = File.listRoots();
-        mountPointNodes = new FileTreeNode[mountPoints.length];
+    public RootNode(RootHandle root) {
+        this.root = root;
+        refresh();
+    }
 
-        for (int i = 0; i < mountPoints.length; i++) {
-            mountPointNodes[i] = new FileTreeNode(mountPoints[i]);
+    public void refresh() {
+        children.clear();
+        for (Handle mount : root.getChildren()) {
+            children.add(new FileNode((FileHandle) mount));
         }
     }
 
     @Override
     public TreeNode getChildAt(int childIndex) {
-        return mountPointNodes[childIndex];
+        return children.get(childIndex);
     }
 
     @Override
     public int getChildCount() {
-        return mountPointNodes.length;
+        return children.size();
     }
 
     @Override
@@ -36,7 +42,7 @@ public class RootNode implements TreeNode {
 
     @Override
     public int getIndex(TreeNode node) {
-        return Arrays.asList(mountPointNodes).indexOf(node);
+        return List.of(children).indexOf(node);
     }
 
     @Override
@@ -51,7 +57,7 @@ public class RootNode implements TreeNode {
 
     @Override
     public Enumeration<? extends TreeNode> children() {
-        return Collections.enumeration(Arrays.asList(mountPointNodes));
+        return Collections.enumeration(children);
     }
 
     @Override
